--- a/filter.d/proxmox-backup-server.conf
+++ b/filter.d/proxmox-backup-server.conf
@@ -4,7 +4,19 @@
 #
 # Matches e.g.
 # 2020-11-24T13:17:27+01:00: authentication failure; rhost=::ffff:17.225.71.15 user=root@pam msg=AUTH_ERR (7)
+# Should not match:
+# 2020-11-24T13:17:27+01:00: authentication failure; rhost=::ffff:77.205.51.62 msg=invalid ticket - expired
 
-[Definition] 
-failregex = authentication failure; rhost=<HOST>
+[INCLUDES]
 
+before = common.conf
+
+[Definition]
+
+__suffix_failed_login = (AUTH_ERR|invalid credentials).?
+
+failregex = authentication failure; rhost=<HOST>.*msg=%(__suffix_failed_login)
+
+ignoreregex = 
+
+# Author: Marco Gabriel, inett GmbH
