changed filter to better match only auth errors and failed authentification tries, but not expired tickets. now with a type fox. ahem, typo fix.

--- a/filter.d/proxmox-backup-server.conf
+++ b/filter.d/proxmox-backup-server.conf
@@ -15,7 +15,7 @@ before = common.conf
 
 __suffix_failed_login = (AUTH_ERR|invalid credentials).?
 
-failregex = authentication failure; rhost=<HOST>.*msg=%(__suffix_failed_login)
+failregex = authentication failure; rhost=<HOST>.*msg=%(__suffix_failed_login)s
 
 ignoreregex = 
 
