--- a/filter.d/proxmox-backup-server.conf
+++ b/filter.d/proxmox-backup-server.conf
@@ -13,7 +13,7 @@ before = common.conf
 
 [Definition]
 
-__suffix_failed_login = (AUTH_ERR|invalid credentials).?
+__suffix_failed_login = (AUTH_ERR|invalid credentials|user account disabled or expired).?
 
 failregex = authentication failure; rhost=<HOST>.*msg=%(__suffix_failed_login)s
 
