fixes filter for pbs3, closes #9

--- a/filter.d/proxmox-backup-server.conf
+++ b/filter.d/proxmox-backup-server.conf
@@ -13,7 +13,7 @@ before = common.conf
 
 [Definition]
 
-__suffix_failed_login = (AUTH_ERR|invalid credentials|user account disabled or expired).?
+__suffix_failed_login = (AUTH_ERR|invalid credentials|user account disabled or expired|authentication error).?
 
 failregex = authentication failure; rhost=\[<HOST>\]:\d+ user=.* msg=%(__suffix_failed_login)s
 
