--- a/filter.d/proxmox-backup-server.conf
+++ b/filter.d/proxmox-backup-server.conf
@@ -9,7 +9,7 @@
 # 2020-11-24T13:17:27+01:00: authentication failure; rhost=[::ffff:17.225.71.15]:29315 user=root@pam msg=authentication error - SUCCESS (0)
 # 2020-11-24T13:17:27+01:00: authentication failure; rhost=[::ffff:17.225.71.15]:29315 user=root@pam msg=authentication failed
 # Should not match:
-# 2020-11-24T13:17:27+01:00: authentication failure; rhost=::ffff:17.225.71.15 msg=invalid ticket - expired
+# 2020-11-24T13:17:27+01:00: authentication failure; rhost=[::ffff:17.225.71.15] msg=invalid ticket - expired
 
 [INCLUDES]
 
